# CP_imu_logger

3dmodel/: README.md
3dmodel/gen1/: README.md  enclosure-nrf52840sense.stl  raket-bund-med-gevind.stl  raket-elektronikholder.stl  raket-finne.stl  raket-mellemstykke-kort-med-gevind.stl  raket-spids-med-gevind.stl
3dmodel/gen2/: README.md
AppInventerNRF/: NRF_Sense_BLE.aia  NRF_Sense_BLE_control.aia
pirat_app/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml  west.yml
pirat_app/boards/: xiao_ble_nrf52840_sense.overlay
pirat_app/drivers/: CMakeLists.txt  Kconfig
pirat_app/drivers/tdk/icm20948/: CMakeLists.txt  Kconfig  icm20948.c  icm20948.h
pirat_app/dts/bindings/sensor/: invensense,icm20948.yaml
pirat_app/src/: main.c
pirat_app/src/lib/: ble.c  ble.h  imu.c  imu.h  led.c  led.h  mass_storage_device.c  mass_storage_device.h  mpu9250.c  mpu9250.h
